[package]
name = "tarr"
version = "0.1.1-alpha.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
repository = "https://github.com/nicholasbishop/tarr"
license = "Apache-2.0"
description = "Command-line tarball utility"
keywords = ["tar", "tarball", "cli"]
readme = "README.md"

[dependencies]
anyhow = "1.0.47"
argh = "0.1.6"
fehler = "1.0.0"
humansize = "1.1.1"
tar = "0.4.37"
tempfile = "3.2.0"
unicode-width = "0.1.9"
