[badges.maintenance]
status = "deprecated"

[package]
name = "tarr"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/nicholasbishop/tarr"
license = "Apache-2.0"
description = "Command-line tarball utility"
keywords = ["tar", "tarball", "cli"]
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.47", default-features = false, features = ["std"] }
argh = { version = "0.1.6", default-features = false }
fehler = { version = "1.0.0", default-features = false }
humansize = { version = "1.1.1", default-features = false }
tar = { version = "0.4.37", default-features = false }
tempfile = { version = "3.2.0", default-features = false }
unicode-width = { version = "0.1.9", default-features = false }
